--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <section class="white">
         <div class="bob"><p>YES! I have my Navbar jam in between website.</p></div>
         <ul>
-            <li><a href="about.html">About Me</a></li>
-            <li><a href="skill.html">My Skills</a></li>
+            <li><button class="about" onclick="window.location.href='about.html'">About Me</button></li>
+            <li><button class="skeel" onclick="window.location.href='skill.html'">My Skills</button></li>
         </ul>
 
         <div class="tide1">
@@ -37,7 +37,7 @@
         <div class="socials">
             <ul>
                 <li><a href="https://github.com/iamshobhraj" target="_blank"><img src="github.ico" alt="github logo" height="60rem" width="60rem" style="background-color: white; border-radius: 50%;"></a></li>
-                <li><a href="" target="_blank"><img src="linkedin.ico" alt="linkedin logo" height="60rem" width="60rem" style="background-color: white; padding: 0%;"></a></li>
+                <li><a href="https://www.linkedin.com/in/iamshobh/" target="_blank"><img src="linkedin.ico" alt="linkedin logo" height="60rem" width="60rem" style="background-color: white; padding: 0%;"></a></li>
                 <li><a href="" target="_blank"><img src="discord.ico" alt="discord logo" height="60rem" width="60rem"></a></li>
                 <li><a href="" target="_blank"><img src="reddit.ico" alt="reddit logo" height="60rem" width="60rem"></a></li>
             </ul>
