--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>My Portfolio</title>
     <link rel="stylesheet" href="style_index.css">
 </head>
+
 <body>
     <section class="orange">
         <div class="leftwala">
@@ -17,7 +18,9 @@
         <img src="portfolio.png" height="210rem" width="210rem">
     </section>
     <section class="white">
-        <div class="bob"><p>YES! I have my Navbar jam in between website.</p></div>
+        <div class="bob">
+            <p>YES! I have my Navbar jam in between website.</p>
+        </div>
         <ul>
             <li><button class="about" onclick="window.location.href='about.html'">About Me</button></li>
             <li><button class="skeel" onclick="window.location.href='skill.html'">My Skills</button></li>
@@ -36,12 +39,17 @@
         <h1>My Socials</h1>
         <div class="socials">
             <ul>
-                <li><a href="https://github.com/iamshobhraj" target="_blank"><img src="github.ico" alt="github logo" height="60rem" width="60rem" style="background-color: white; border-radius: 50%;"></a></li>
-                <li><a href="https://www.linkedin.com/in/iamshobh/" target="_blank"><img src="linkedin.ico" alt="linkedin logo" height="60rem" width="60rem" style="background-color: white; padding: 0%;"></a></li>
-                <li><a href="" target="_blank"><img src="discord.ico" alt="discord logo" height="60rem" width="60rem"></a></li>
-                <li><a href="" target="_blank"><img src="reddit.ico" alt="reddit logo" height="60rem" width="60rem"></a></li>
+                <li><a href="https://github.com/iamshobhraj" target="_blank"><img src="github.ico" alt="github logo"
+                            height="60rem" width="60rem" style="background-color: white; border-radius: 50%;"></a></li>
+                <li><a href="https://www.linkedin.com/in/iamshobh/" target="_blank"><img src="linkedin.ico"
+                            alt="linkedin logo" height="60rem" width="60rem"
+                            style="background-color: white; padding: 0%; border-radius: 15%;"></a></li>
+                <li><a href="" target="_blank"><img src="discord.ico" alt="discord logo" height="60rem"
+                            width="60rem"></a></li>
+                <li><a href="" target="_blank"><img src="reddit.ico" alt="reddit logo" height="60rem" width="60rem"></a>
+                </li>
             </ul>
-        </div>  
+        </div>
 
         <div class="tide2">
             <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120"
